--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 													<div class="desc">
 														<h1>Hi! <br>I'm Arjun</h1>
 														<h2>Web Developer</h2>
-														<p><a class="btn btn-primary" href="#" download="Arjun CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
+														<p><a class="btn btn-primary" href="#" download="Arjun's CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
 													</div>
 												</div>
 											</div>
