--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 											<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 												<div class="slider-text-inner">
 													<div class="desc">
-														<h1>I'm <br>Designer / <br> Developer</h1>
+														<h1>I'm <br>Mobile App <br> Developer</h1>
 														<p><a href="#" class="btn btn-primary">Contact Me <i class="fa fa-phone"></i></a></p>
 													</div>
 												</div>
@@ -111,8 +111,8 @@
 											<div class="about-desc">
 												<span class="heading-meta">About Me</span>
 												<h1 class="arjun-heading">Who Am I?</h1>
-												<p>Hi I'm<strong> Arjun Bhandari</strong>, a student of Computer Engineering at Kathmandu Univeristy. I am Web Designer & Developer and have skills on HTML5, CSS3, Javascript and Bootstrap4. My backend skills includes NodeJS, ExpressJS, Python and Django Framework.</p>
-												<p> My area of interests are Web, Cybersecurity, AI and Networking. I have also experience on Web Designing and UI/UX designing. If you want more detailed informations about me the you can download and view my CV.</p>
+												<p>Hi I'm<strong> Arjun Bhandari</strong>, a student of Computer Engineering at Kathmandu Univeristy. I am Full Stack & Mobile App Developer and have skills on Flutter, Dart, JavaScript, NodeJS, ExpressJS, Python and Django Framework.</p>
+												<p> My area of interests are Web, Cybersecurity, AI and Networking. If you want more detailed informations about me the you can download and view my CV.</p>
 											</div>
 										</div>
 									</div>
@@ -235,7 +235,7 @@
 									<span class="arjun-counter-label">Projects</span>
 								</div>
 								<div class="col-md-3 text-center animate-box">
-									<span class="arjun-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="arjun-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
 									<span class="arjun-counter-label">Clients</span>
 								</div>
 								<div class="col-md-3 text-center animate-box">
@@ -271,29 +271,29 @@
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 									<div class="progress-wrap">
-										<h3>jQuery</h3>
+										<h3>Flutter</h3>
 										<div class="progress">
-											<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
+											<div class="progress-bar color-2" role="progressbar" aria-valuenow="90"
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
 											</div>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 									<div class="progress-wrap">
-										<h3>HTML5</h3>
+										<h3>Dart</h3>
 										<div class="progress">
-											<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
-											aria-valuemin="0" aria-valuemax="100" style="width:85%">
-											<span>85%</span>
+											<div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
 											</div>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 									<div class="progress-wrap">
-										<h3>CSS3</h3>
+										<h3>JavaScript</h3>
 										<div class="progress">
 											<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -315,7 +315,7 @@
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 									<div class="progress-wrap">
-										<h3>Bootstrap</h3>
+										<h3>Firebase</h3>
 										<div class="progress">
 											<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -464,7 +464,7 @@
 								<div class="col-md-7 col-md-push-1">
 									<div class="contact-form col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
 										<div id="form-messages"></div>
-										<form class="needs-validation" id="ajax-contact" validate>
+										<form class="needs-validation" id="ajax-contact" validate action="mailto:arjunbhandari3773@gmail.com" method=”POST” enctype=”multipart/form-data” name=”EmailForm”>
 											<div class="col-xs-12 ">
 												<div class="form-group">
 													<input type="text" name="name" class="form-control" placeholder="Your Name"
@@ -502,7 +502,7 @@
 							<div class="row">
 								<div class="col-md-12 text-center">
 									<div class="container-fluid text-center" >
-										<h4>Copyright © <a href="http://bhandariarjun.com.np"><strong> Arjun Bhandari </strong></a> 2019 <br><br> All Rights Reserved.</h4>
+										<h4>Copyright © <a href="http://bhandariarjun.com.np"><strong> Arjun Bhandari </strong></a> 2021 <br><br> All Rights Reserved.</h4>
 									</div>
 								</div>
 							</div>
