--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 													<div class="desc">
 														<h1>Hi! <br>I'm Arjun</h1>
 														<h2>Web Developer</h2>
-														<p><a class="btn btn-primary" href="CV.pdf" download="Arjun's CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
+														<p><a class="btn btn-primary" href="../public/CV.pdf" download="Arjun's CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
 													</div>
 												</div>
 											</div>
@@ -91,7 +91,7 @@
 												<div class="slider-text-inner">
 													<div class="desc">
 														<h1>I'm <br>Mobile App <br> Developer</h1>
-														<p><a href="#" class="btn btn-primary">Contact Me <i class="fa fa-phone"></i></a></p>
+														<p><a href="#arjun-contact" class="btn btn-primary">Contact Me <i class="fa fa-phone"></i></a></p>
 													</div>
 												</div>
 											</div>
