--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 												<div class="slider-text-inner">
 													<div class="desc">
 														<h1>I'm <br>Mobile App <br> Developer</h1>
-														<p><a href="#arjun-contact" class="btn btn-primary">Contact Me <i class="fa fa-phone"></i></a></p>
+														<p><a href="#" data-nav-section="contact" class="btn btn-primary">Contact Me <i class="fa fa-phone"></i></a></p>
 													</div>
 												</div>
 											</div>
