--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
 											</div>
 											<div class="col-xs-12 ">
 												<div class="form-group">
-													<textarea name="message" id="message" class="form-control" rows="8"
-														placeholder="Your Message" id="message" required></textarea>
+													<textarea name="body" id="message" class="form-control" rows="8"
+														placeholder="Your Message" required></textarea>
 												</div>
 											</div>
 											<button id="btnSubmit" type="submit" name="submit" class="btn btn-lg btn-block btn-primary">Send
