--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div class="text-center">
 						<div class="author-img" style="background-image: url(../public/images/profile.jpg);"></div>
 						<h1 id="arjun-logo"><a href="https://bhandariarjun.com.np/">Arjun Bhandari</a></h1>
-						<h3 class="position"><a href="#" data-nav-section="services">Designer / Developer / Freelancer</a></h3>
+						<h3 class="position"><a href="#" data-nav-section="services">Developer / Freelancer</a></h3>
 					</div>
 					<nav id="arjun-main-menu" role="navigation" class="navbar">
 						<div id="navbar" class="collapse">
@@ -75,7 +75,7 @@
 												<div class="slider-text-inner js-fullheight">
 													<div class="desc">
 														<h1>Hi! <br>I'm Arjun</h1>
-														<h2>Web Developer</h2>
+														<h2>I have 4+ years of working experience in enterprise software development</h2>
 														<p><a class="btn btn-primary" href="../public/CV.pdf" download="Arjun's CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
 													</div>
 												</div>
@@ -90,7 +90,8 @@
 											<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 												<div class="slider-text-inner">
 													<div class="desc">
-														<h1>I'm <br>Mobile App <br> Developer</h1>
+														<h1>I'm <br>Senior Software Engineer</h1>
+														<h2>I code in JavaScript | TypeScript | Flutter | Dart | Python | React | AWS</h2>
 														<p><a href="#" data-nav-section="contact" class="btn btn-primary">Contact Me <i class="fa fa-phone"></i></a></p>
 													</div>
 												</div>
@@ -111,8 +112,12 @@
 											<div class="about-desc">
 												<span class="heading-meta">About Me</span>
 												<h1 class="arjun-heading">Who Am I?</h1>
-												<p>Hi I'm<strong> Arjun Bhandari</strong>, a student of Computer Engineering at Kathmandu Univeristy. I am Full Stack & Mobile App Developer and have skills on Flutter, Dart, JavaScript, NodeJS, ExpressJS, Python and Django Framework.</p>
-												<p> My area of interests are Web, Cybersecurity, AI and Networking. If you want more detailed informations about me the you can download and view my CV.</p>
+												<p>
+													Hi I'm<strong> Arjun Bhandari</strong>. I have been working as a Software Engineer & Full Stack Developer for more than 4+ years and have hands-on experience in multiple programming languages, frameworks & technologies. 
+													I mostly worked in JavaScript, Typescript, NodeJS, ExpressJS, Flutter, Dart,  Python, and Django Framework.
+												</p>
+												<p>I work on R&D projects, manage and deploy software applications, and integrate project management methodologies for software development.</p>
+												<p>My areas of interest are Web Development, Mobile App Development, AI and AWS. If you would like more detailed information about me, you can download and view my CV.</p>
 											</div>
 										</div>
 									</div>
@@ -120,25 +125,25 @@
 										<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 											<div class="services color-1">
 												<span class="icon2"><i class="icon-bulb"></i></span>
-												<h3>Graphic Design</h4>
+												<h3>Design & Discovery</h4>
 											</div>
 										</div>
 										<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 											<div class="services color-2">
 												<span class="icon2"><i class="icon-globe-outline"></i></span>
-												<h3>Web Design</h3>
+												<h3>Software Development</h3>
 											</div>
 										</div>
 										<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 											<div class="services color-3">
 												<span class="icon2"><i class="icon-data"></i></span>
-												<h3>Software</h3>
+												<h3>Database Management</h3>
 											</div>
 										</div>
 										<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
 											<div class="services color-4">
 												<span class="icon2"><i class="icon-phone3"></i></span>
-												<h3>Application</h3>
+												<h3>Application Management</h3>
 											</div>
 										</div>
 									</div>
@@ -163,26 +168,29 @@
 										</span>
 										<div class="desc">
 											<h3>Innovative Ideas</h3>
+											<h2>Discover a creative way in finding and solving a problem</h2>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-4 text-center animate-box">
 									<div class="services color-2">
 										<span class="icon">
-											<i class="icon-layers2"></i>
+											<i class="fa fa-television"></i>
 										</span>
 										<div class="desc">
-											<h3>Web Designer</h3>
+											<h3>Software</h3>
+											<h2>Develop an enterprise-level software solution as per the requirement</h2>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-4 text-center animate-box">
 									<div class="services color-3">
 										<span class="icon">
-											<i class="fa fa-television"></i>
+											<i class="icon-phone3"></i>
 										</span>
 										<div class="desc">
-											<h3>Network Enthusiast</h3>
+											<h3>Application</h3>
+											<h2>Create mobile-based software applications with interactive design</h2>
 										</div>
 									</div>
 								</div>
@@ -192,7 +200,8 @@
 											<i class="icon-layers2"></i>
 										</span>
 										<div class="desc">
-											<h3>Graphic Design</h3>
+											<h3>Cloud Deployment</h3>
+											<h2>Deploy software solutions on cloud in different cloud service platforms</h2>
 										</div>
 									</div>
 								</div>
@@ -202,17 +211,19 @@
 											<i class="icon-data"></i>
 										</span>
 										<div class="desc">
-											<h3>Web Developer</h3>
+											<h3>Architect Solutions</h3>
+											<h2>Determine the best practices required to architect software on the cloud</h2>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-4 text-center animate-box">
 									<div class="services color-6">
 										<span class="icon">
-											<i class="icon-phone3"></i>
+											<i class="icon-layers2"></i>
 										</span>
 										<div class="desc">
-											<h3>Mobile Application</h3>
+											<h3>Team Management</h3>
+											<h2>Work in a Team, allocate tasks and use Agile methodology for software development</h2>
 										</div>
 									</div>
 								</div>
@@ -227,19 +238,19 @@
 							</div>
 							<div class="row">
 								<div class="col-md-3 text-center animate-box">
-									<span class="arjun-counter js-counter" data-from="0" data-to="1309" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="arjun-counter js-counter" data-from="0" data-to="1207" data-speed="5000" data-refresh-interval="50"></span>
 									<span class="arjun-counter-label">Cups of coffee</span>
 								</div>
 								<div class="col-md-3 text-center animate-box">
-									<span class="arjun-counter js-counter" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="arjun-counter js-counter" data-from="0" data-to="24" data-speed="5000" data-refresh-interval="50"></span>
 									<span class="arjun-counter-label">Projects</span>
 								</div>
 								<div class="col-md-3 text-center animate-box">
-									<span class="arjun-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="arjun-counter js-counter" data-from="0" data-to="12" data-speed="5000" data-refresh-interval="50"></span>
 									<span class="arjun-counter-label">Clients</span>
 								</div>
 								<div class="col-md-3 text-center animate-box">
-									<span class="arjun-counter js-counter" data-from="0" data-to="8" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="arjun-counter js-counter" data-from="0" data-to="5" data-speed="5000" data-refresh-interval="50"></span>
 									<span class="arjun-counter-label">Partners</span>
 								</div>
 							</div>
@@ -256,22 +267,22 @@
 							</div>
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-									<p> As a Web Designer & Developer, I have skills on following specialities: </p>
+									<p> As a Full Stack Developer, I have skills in the following specialties: </p>
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 									<div class="progress-wrap">
-										<h3>Photoshop</h3>
+										<h3>JavaScript</h3>
 										<div class="progress">
 											<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:95%">
+											<span>95%</span>
 											</div>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 									<div class="progress-wrap">
-										<h3>Flutter</h3>
+										<h3>TypeScript</h3>
 										<div class="progress">
 											<div class="progress-bar color-2" role="progressbar" aria-valuenow="90"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -282,7 +293,7 @@
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 									<div class="progress-wrap">
-										<h3>Dart</h3>
+										<h3>NodeJS</h3>
 										<div class="progress">
 											<div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -293,7 +304,7 @@
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 									<div class="progress-wrap">
-										<h3>JavaScript</h3>
+										<h3>ReactJS</h3>
 										<div class="progress">
 											<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -302,9 +313,20 @@
 										</div>
 									</div>
 								</div>
+								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+									<div class="progress-wrap">
+										<h3>Redux</h3>
+										<div class="progress">
+											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
+											</div>
+										</div>
+									</div>
+								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 									<div class="progress-wrap">
-										<h3>MySQL</h3>
+										<h3>AWS</h3>
 										<div class="progress">
 											<div class="progress-bar color-5" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -315,20 +337,31 @@
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 									<div class="progress-wrap">
-										<h3>Firebase</h3>
+										<h3>Flutter</h3>
 										<div class="progress">
 											<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
 											</div>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 									<div class="progress-wrap">
-										<h3>Python</h3>
+										<h3>Dart</h3>
 										<div class="progress">
 											<div class="progress-bar color-7" role="progressbar" aria-valuenow="80"
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+									<div class="progress-wrap">
+										<h3>Python</h3>
+										<div class="progress">
+											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
 											<span>80%</span>
 											</div>
@@ -340,8 +373,41 @@
 										<h3>Django</h3>
 										<div class="progress">
 											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
-											aria-valuemin="0" aria-valuemax="100" style="width:85%">
-											<span>85%</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:80%">
+											<span>80%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+									<div class="progress-wrap">
+										<h3>MongoDB</h3>
+										<div class="progress">
+											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+									<div class="progress-wrap">
+										<h3>PostgreSQL</h3>
+										<div class="progress">
+											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+									<div class="progress-wrap">
+										<h3>Firebase</h3>
+										<div class="progress">
+											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
+											aria-valuemin="0" aria-valuemax="100" style="width:80%">
+											<span>80%</span>
 											</div>
 										</div>
 									</div>
@@ -365,14 +431,14 @@
 											<div class="panel panel-default">
 												<div class="panel-heading" role="tab" id="headingOne">
 													<h4 class="panel-title">
-														<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Bachelor Degree In Computer Engineering</a>
+														<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Master of Engineering in Computer Engineering</a>
 													</h4>
 												</div>
 												<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 													<div class="panel-body">
 														<div class="row">
 															<div class="col-md-12">
-																<p>Currently, I am studying in undergraduate level in <strong> Kathmandu University </strong> on the programme Bachelor in <strong> Computer Engineering </strong> since August 2017. </p>
+																<p>I started my graduate level in <strong> Kathmandu University </strong> on the programme Master of Engineering in <strong> Computer Engineering </strong> since December 2024.</p>
 															</div>
 														</div>
 													</div>
@@ -381,39 +447,41 @@
 											<div class="panel panel-default">
 												<div class="panel-heading" role="tab" id="headingTwo">
 													<h4 class="panel-title">
-														<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Higher Secondary Education (+2 Science)
-														</a>
+														<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">Bachelor of Engineering in Computer Engineering</a>
 													</h4>
 												</div>
-												<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+												<div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
 													<div class="panel-body">
-														<p>I completed my higher secondary education from <strong>Morgan International College</strong> on 2016. I studied <strong>Science </strong> and passed in Distinction with 75.6% aggregate.</p>
+														<div class="row">
+															<div class="col-md-12">
+																<p>I completed my undergraduate level in <strong> Kathmandu University </strong> on the programme Bachelor of Engineering in <strong> Computer Engineering </strong> on March 2022.</p>
+															</div>
+														</div>
 													</div>
 												</div>
 											</div>
 											<div class="panel panel-default">
 												<div class="panel-heading" role="tab" id="headingThree">
 													<h4 class="panel-title">
-														<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Secondary Level Education (6-10)</a>
+														<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Higher Secondary Education (+2 Science)
+														</a>
 													</h4>
 												</div>
 												<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 													<div class="panel-body">
-														<p>I completed my secondary level education from <strong>Nawalpur Higher Secondary Boarding School</strong>. I studied here from 2009 and passed S.L.C. exam in 2014 in Distinction with 87.5%.</p>	
+														<p>I completed my higher secondary education from <strong>Morgan International College</strong> on 2016. I studied <strong>Science </strong> and passed in Distinction with 75.6% aggregate.</p>
 													</div>
 												</div>
 											</div>
-
 											<div class="panel panel-default">
 												<div class="panel-heading" role="tab" id="headingFour">
 													<h4 class="panel-title">
-														<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Primary Education(Nursery-5)
-														</a>
+														<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Secondary Level Education</a>
 													</h4>
 												</div>
 												<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 													<div class="panel-body">
-														<p><p>I completed my primary level education from <strong>Shree Saugat English Boarding School</strong>. I studied here from 2001 to 2009.</p>	
+														<p>I completed my secondary level education from <strong>Nawalpur Higher Secondary Boarding School</strong>. I passed the S.L.C. exam in 2014 with a Distinction of 87.5%.</p>	
 													</div>
 												</div>
 											</div>
@@ -502,7 +570,7 @@
 							<div class="row">
 								<div class="col-md-12 text-center">
 									<div class="container-fluid text-center" >
-										<h4>Copyright © <a href="http://bhandariarjun.com.np"><strong> Arjun Bhandari </strong></a> 2021 <br><br> All Rights Reserved.</h4>
+										<h4>Copyright © <a href="http://bhandariarjun.com.np"><strong> Arjun Bhandari </strong></a> 2025 <br><br> All Rights Reserved.</h4>
 									</div>
 								</div>
 							</div>
