--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 													<div class="desc">
 														<h1>Hi! <br>I'm Arjun</h1>
 														<h2>I have 4+ years of working experience in enterprise software development</h2>
-														<p><a class="btn btn-primary" href="../public/CV.pdf" download="Arjun's CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
+														<p><a class="btn btn-primary" href="../public/Arjun _Bhandari_Resume.pdf" download="Arjun's CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
 													</div>
 												</div>
 											</div>
