--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 										</span>
 										<div class="desc">
 											<h3>Innovative Ideas</h3>
-											<h2>Discover a creative way in finding and solving a problem</h2>
+											<h5>Discover a creative way in finding and solving a problem</h5>
 										</div>
 									</div>
 								</div>
@@ -179,7 +179,7 @@
 										</span>
 										<div class="desc">
 											<h3>Software</h3>
-											<h2>Develop an enterprise-level software solution as per the requirement</h2>
+											<h5>Develop an enterprise-level software solution as per the requirement</h5>
 										</div>
 									</div>
 								</div>
@@ -190,7 +190,7 @@
 										</span>
 										<div class="desc">
 											<h3>Application</h3>
-											<h2>Create mobile-based software applications with interactive design</h2>
+											<h5>Create mobile-based software applications with interactive design</h5>
 										</div>
 									</div>
 								</div>
@@ -201,7 +201,7 @@
 										</span>
 										<div class="desc">
 											<h3>Cloud Deployment</h3>
-											<h2>Deploy software solutions on cloud in different cloud service platforms</h2>
+											<h5>Deploy software solutions on cloud in different cloud service platforms</h5>
 										</div>
 									</div>
 								</div>
@@ -212,7 +212,7 @@
 										</span>
 										<div class="desc">
 											<h3>Architect Solutions</h3>
-											<h2>Determine the best practices required to architect software on the cloud</h2>
+											<h5>Determine the best practices required to architect software on the cloud</h5>
 										</div>
 									</div>
 								</div>
@@ -223,7 +223,7 @@
 										</span>
 										<div class="desc">
 											<h3>Team Management</h3>
-											<h2>Work in a Team, allocate tasks and use Agile methodology for software development</h2>
+											<h5>Work in a Team, allocate tasks and use Agile methodology for software development</h5>
 										</div>
 									</div>
 								</div>
@@ -317,7 +317,7 @@
 									<div class="progress-wrap">
 										<h3>Redux</h3>
 										<div class="progress">
-											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
+											<div class="progress-bar color-5" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
 											<span>90%</span>
 											</div>
@@ -328,7 +328,7 @@
 									<div class="progress-wrap">
 										<h3>AWS</h3>
 										<div class="progress">
-											<div class="progress-bar color-5" role="progressbar" aria-valuenow="80"
+											<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
 											<span>80%</span>
 											</div>
@@ -339,7 +339,7 @@
 									<div class="progress-wrap">
 										<h3>Flutter</h3>
 										<div class="progress">
-											<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
+											<div class="progress-bar color-7" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
 											<span>90%</span>
 											</div>
@@ -350,7 +350,7 @@
 									<div class="progress-wrap">
 										<h3>Dart</h3>
 										<div class="progress">
-											<div class="progress-bar color-7" role="progressbar" aria-valuenow="80"
+											<div class="progress-bar color-8" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
 											<span>90%</span>
 											</div>
@@ -361,7 +361,7 @@
 									<div class="progress-wrap">
 										<h3>Python</h3>
 										<div class="progress">
-											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
+											<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
 											<span>80%</span>
 											</div>
@@ -372,7 +372,7 @@
 									<div class="progress-wrap">
 										<h3>Django</h3>
 										<div class="progress">
-											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
+											<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
 											<span>80%</span>
 											</div>
@@ -383,7 +383,7 @@
 									<div class="progress-wrap">
 										<h3>MongoDB</h3>
 										<div class="progress">
-											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
+											<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
 											<span>90%</span>
 											</div>
@@ -394,7 +394,7 @@
 									<div class="progress-wrap">
 										<h3>PostgreSQL</h3>
 										<div class="progress">
-											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
+											<div class="progress-bar color-4" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
 											<span>90%</span>
 											</div>
@@ -405,8 +405,19 @@
 									<div class="progress-wrap">
 										<h3>Firebase</h3>
 										<div class="progress">
-											<div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
-											aria-valuemin="0" aria-valuemax="100" style="width:80%">
+											<div class="progress-bar color-5" role="progressbar" aria-valuenow="85"
+											aria-valuemin="0" aria-valuemax="100" style="width:85%">
+											<span>80%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+									<div class="progress-wrap">
+										<h3>MySQL</h3>
+										<div class="progress">
+											<div class="progress-bar color-6" role="progressbar" aria-valuenow="85"
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
 											<span>80%</span>
 											</div>
 										</div>
@@ -447,7 +458,7 @@
 											<div class="panel panel-default">
 												<div class="panel-heading" role="tab" id="headingTwo">
 													<h4 class="panel-title">
-														<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">Bachelor of Engineering in Computer Engineering</a>
+														<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor of Engineering in Computer Engineering</a>
 													</h4>
 												</div>
 												<div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
@@ -532,7 +543,7 @@
 								<div class="col-md-7 col-md-push-1">
 									<div class="contact-form col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
 										<div id="form-messages"></div>
-										<form class="needs-validation" id="ajax-contact" validate action="mailto:arjunbhandari3773@gmail.com" method=”POST” enctype=”multipart/form-data” name=”EmailForm”>
+										<form class="needs-validation" id="ajax-contact" validate action="mailto:arjunbhandari3773@gmail.com" method=”POST” enctype=”multipart/form-data” name=”EmailForm” netlify>
 											<div class="col-xs-12 ">
 												<div class="form-group">
 													<input type="text" name="name" class="form-control" placeholder="Your Name"
