--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 										</span>
 										<div class="desc">
 											<h3>Innovative Ideas</h3>
-											<h5>Discover a creative way in finding and solving a problem</h5>
+											<p>Discover a creative way in finding and solving a problem</p>
 										</div>
 									</div>
 								</div>
@@ -179,7 +179,7 @@
 										</span>
 										<div class="desc">
 											<h3>Software</h3>
-											<h5>Develop an enterprise-level software solution as per the requirement</h5>
+											<p>Develop an enterprise-level software solution as per the requirement</p>
 										</div>
 									</div>
 								</div>
@@ -190,7 +190,7 @@
 										</span>
 										<div class="desc">
 											<h3>Application</h3>
-											<h5>Create mobile-based software applications with interactive design</h5>
+											<p>Create mobile-based software applications with interactive design</p>
 										</div>
 									</div>
 								</div>
@@ -201,7 +201,7 @@
 										</span>
 										<div class="desc">
 											<h3>Cloud Deployment</h3>
-											<h5>Deploy software solutions on cloud in different cloud service platforms</h5>
+											<p>Deploy software solutions on cloud in different cloud service platforms</p>
 										</div>
 									</div>
 								</div>
@@ -212,7 +212,7 @@
 										</span>
 										<div class="desc">
 											<h3>Architect Solutions</h3>
-											<h5>Determine the best practices required to architect software on the cloud</h5>
+											<p>Determine the best practices required to architect software on the cloud</p>
 										</div>
 									</div>
 								</div>
@@ -223,7 +223,7 @@
 										</span>
 										<div class="desc">
 											<h3>Team Management</h3>
-											<h5>Work in a Team, allocate tasks and use Agile methodology for software development</h5>
+											<p>Work in a Team, allocate tasks and use Agile methodology for software development</p>
 										</div>
 									</div>
 								</div>
@@ -461,7 +461,7 @@
 														<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor of Engineering in Computer Engineering</a>
 													</h4>
 												</div>
-												<div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
+												<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 													<div class="panel-body">
 														<div class="row">
 															<div class="col-md-12">
@@ -527,7 +527,7 @@
 											<i class="fa fa-home"></i>
 										</div>
 										<div class="arjun-text">
-											<p><strong>Madhyabindu-13,Nawalpur </strong> </p>
+											<p><strong>Madhyabindu, Nawalpur </strong> </p>
 										</div>
 									</div>
 
