--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 										</span>
 										<div class="desc">
 											<h3>Team Management</h3>
-											<p>Work in a Team, allocate tasks and use Agile methodology for software development</p>
+											<p>Work in a Team, and use Agile methodology for software development</p>
 										</div>
 									</div>
 								</div>
