--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 											<div class="panel panel-default">
 												<div class="panel-heading" role="tab" id="headingTwo">
 													<h4 class="panel-title">
-														<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor of Engineering in Computer Engineering</a>
+														<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor of Engineering in Computer Engineering</a>
 													</h4>
 												</div>
 												<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
