--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 								<div class="col-md-7 col-md-push-1">
 									<div class="contact-form col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
 										<div id="form-messages"></div>
-										<form class="needs-validation" id="ajax-contact" validate action="mailto:arjunbhandari3773@gmail.com" method=”POST” enctype=”multipart/form-data” name=”EmailForm” netlify>
+										<form class="needs-validation" id="ajax-contact" validate name=”EmailForm” netlify>
 											<div class="col-xs-12 ">
 												<div class="form-group">
 													<input type="text" name="name" class="form-control" placeholder="Your Name"
