--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 												<div class="slider-text-inner">
 													<div class="desc">
 														<h1>I'm <br>Senior Software Engineer</h1>
-														<h2>I code in JavaScript | TypeScript | Flutter | Dart | Python | React | AWS</h2>
+														<h2>Experienced in JS | TS | Flutter | Python | AWS</h2>
 														<p><a href="#" data-nav-section="contact" class="btn btn-primary">Contact Me <i class="fa fa-phone"></i></a></p>
 													</div>
 												</div>
