Update profile image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link rel="icon" href="../public/images/profile.jpg" type="image/png">
+		<link rel="icon" href="../public/images/profile.png" type="image/png">
 		<title>Arjun Bhandari</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +27,7 @@
 				<a href="#" class="js-arjun-nav-toggle arjun-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 				<aside id="arjun-aside" role="complementary" class="border js-fullheight">
 					<div class="text-center">
-						<div class="author-img" style="background-image: url(../public/images/profile.jpg);"></div>
+						<div class="author-img" style="background-image: url(../public/images/profile.png);"></div>
 						<h1 id="arjun-logo"><a href="https://bhandariarjun.com.np/">Arjun Bhandari</a></h1>
 						<h3 class="position"><a href="#" data-nav-section="services">Developer / Freelancer</a></h3>
 					</div>
