--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 											<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 												<div class="slider-text-inner">
 													<div class="desc">
-														<h1>I'm <br>Senior Software Engineer</h1>
+														<h1>I'm <br>Sr. Software Engineer</h1>
 														<h2>Experienced in JS | TS | Flutter | Python | AWS</h2>
-														<p><a href="#" data-nav-section="contact" class="btn btn-primary">Contact Me <i class="fa fa-phone"></i></a></p>
+														<p><a href="#" data-nav-section="contact" role="navigation" class="btn btn-primary">Contact Me <i class="fa fa-phone"></i></a></p>
 													</div>
 												</div>
 											</div>
