--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="icon" href="../public/images/profile.png" type="image/png">
 		<title>Arjun Bhandari</title>
+		<meta name="description" content="Full Stack Developer with 4+ years of experience">
+		<meta name="keywords" content="Arjun Bhandari, Full Stack, Senior Software Engineer, Computer Engineer">
+		<meta name="author" content="Arjun Bhandari">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
@@ -71,7 +74,7 @@
 									<div class="overlay"></div>
 									<div class="container-fluid">
 										<div class="row">
-											<div class="col-md-8 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+											<div class="col-md-9 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 												<div class="slider-text-inner js-fullheight">
 													<div class="desc">
 														<h1>Hi! <br>I'm Arjun</h1>
@@ -87,7 +90,7 @@
 									<div class="overlay"></div>
 									<div class="container-fluid">
 										<div class="row">
-											<div class="col-md-8 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+											<div class="col-md-9 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 												<div class="slider-text-inner">
 													<div class="desc">
 														<h1>I'm <br>Sr. Software Engineer</h1>
@@ -113,10 +116,10 @@
 												<span class="heading-meta">About Me</span>
 												<h1 class="arjun-heading">Who Am I?</h1>
 												<p>
-													Hi I'm<strong> Arjun Bhandari</strong>. I have been working as a Software Engineer & Full Stack Developer for more than 4+ years and have hands-on experience in multiple programming languages, frameworks & technologies. 
+													Hi I'm<strong> Arjun Bhandari</strong>. I have been working as a Software Engineer for more than 4+ years and have hands-on experience in multiple programming languages, frameworks & technologies. 
 													I mostly worked in JavaScript, Typescript, NodeJS, ExpressJS, Flutter, Dart,  Python, and Django Framework.
 												</p>
-												<p>I work on R&D projects, manage and deploy software applications, and integrate project management methodologies for software development.</p>
+												<p>I work on R & D projects, manage and deploy software applications, and integrate project management methodologies for software development.</p>
 												<p>My areas of interest are Web Development, Mobile App Development, AI and AWS. If you would like more detailed information about me, you can download and view my CV.</p>
 											</div>
 										</div>
