--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 													<div class="desc">
 														<h1>Hi! <br>I'm Arjun</h1>
 														<h2>4+ years of experience in IT industry</h2>
-														<p><a class="btn btn-primary" href="../public/Arjun _Bhandari_Resume.pdf" download="Arjun's CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
+														<p><a class="btn btn-primary" href="../public/Arjun_Bhandari_Resume.pdf" download="Arjun's CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
 													</div>
 												</div>
 											</div>
