Update experience description in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="icon" href="../public/images/profile.png" type="image/png">
 		<title>Arjun Bhandari</title>
-		<meta name="description" content="Full Stack Developer with 4+ years of experience">
+		<meta name="description" content="Full Stack Developer with 5+ years of experience">
 		<meta name="keywords" content="Arjun Bhandari, Full Stack, Senior Software Engineer, Computer Engineer">
 		<meta name="author" content="Arjun Bhandari">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -78,7 +78,7 @@
 												<div class="slider-text-inner js-fullheight">
 													<div class="desc">
 														<h1>Hi! <br>I'm Arjun</h1>
-														<h2>4+ years of experience in IT industry</h2>
+														<h2>AWS Certified Solutions Architect with 5+ years’ experience</h2>
 														<p><a class="btn btn-primary" href="../public/Arjun_Bhandari_Resume.pdf" download="Arjun's CV.pdf">Download CV <i class="fa fa-download"></i></a></p>
 													</div>
 												</div>
